Fixed contact section mobile responsiveness

--- a/components/Contact/contact.module.scss
+++ b/components/Contact/contact.module.scss
@@ -8,18 +8,33 @@
   display: flex;
   flex-direction: column;
   padding: 0px 95px;
+  @include respond(mobile-screen) {
+    height: fit-content;
+    padding: 10px 6% 45px 6%;
+  }
   &__heading {
     @include heading;
+    @include respond(mobile-screen) {
+      @include heading-mobile;
+      font-size: toRem(50px);
+    }
   }
   &__form {
     display: flex;
     flex-direction: column;
     gap: 21px;
     width: 40%;
+    @include respond(mobile-screen) {
+      width: 100%;
+    }
     &-wrapper {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      @include respond(mobile-screen) {
+        flex-direction: column-reverse;
+        gap: 22px;
+      }
     }
     &-info {
       &-wrapper {
@@ -65,9 +80,19 @@
         }
       }
     }
+    &-image {
+      @include respond(mobile-screen) {
+      }
+    }
     &-button {
       margin-top: 16px;
       align-self: center;
+      @include respond(mobile-screen) {
+        width: 50%;
+        & button {
+          width: 100%;
+        }
+      }
     }
   }
 }
